--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,38 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding: 1px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px;
+  margin: 8px
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  padding: 30px;
+  margin: 8px
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0px auto;
 }
